src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');

* {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

:root {
  --color-bg: #0A0623;
  --color-bg-variant: #555288;
  --color-primary: whitesmoke;
  --color-primary-variant: whitesmoke;
  --color-white: whitesmoke;
  --color-light: rgba(255, 255, 255, 0.6);

  --transition: all 400ms ease;

  --container-width-lg: 82%;
  --container-width-md: 86%;
  --container-width-sm: 90%;
}

html {
  scroll-behavior: smooth;
}

::-webkit-scrollbar {
  display: none;
}

html, body {
  font-family: "Inconsolata", monospace;
  background: var(--color-bg);
  color: var(--color-white);
  line-height: 1.7;
  font-weight: 150;
  cursor: url('assets/cursor.png'), auto;
}

p {
  font-family: "Inconsolata", monospace;
  font-size: 1.2rem;
  background: var(--color-bg);
  color: var(--color-white);
  line-height: 1.7;
  font-weight: 100;
}

/* ============== GENEARL STYLES ============== */
.container {
  width: var(--container-width-lg);
  margin: 0 auto;
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: 500;
}

h1 {
  font-size: 2.5rem;
}

section {
  margin-top: 1rem;
}

section>h2,
section>h5 {
  text-align: center;
  color: var(--color-bg);
}

section>h2 {
  color: var(--color-primary);
  margin-bottom: 3rem;
}

.text-light {
  color: var(--color-bg);
}

a {
  color: var(--color-bg);
  transition: var(--transition);
  font-family: "Inconsolata", monospace;
}

a:hover {
  
}

.btn {
  width: max-content;
  display: inline-block;
  color: var(--color-primary) !important;
  padding: 0.75rem 1.2rem;
  border-radius: 0.4rem;
  cursor: pointer;
  border: 1px solid var(--color-primary);
  border-color: lightgray;
  transition: var(--transition);
  background-color: lightgray !important;
}

.btn:hover {
  background: var(--color-white) !important;
  color: var(--color-bg) !important;
  border-color: transparent !important;
}

.btn-primary {
  background: var(--color-primary);
  color: var(--color-bg);
}

img {
  display: block;
  width: 100%;
  object-fit: cover;
}

.header_and_logo {
  display:flex;
  flex-direction:row;
  align-items: center;
  justify-content:space-between;
}

/* ================ MEDIA QUERIES (MEDIUM DEVICES) ================= */
@media screen and (max-width: 1024px) {
  /* .container {
      width: var(--container-width-md);
  } */

  section {
    margin-top: 6rem;
  }
}

/* ================ MEDIA QUERIES (SMALL DEVICES) ================= */
@media screen and (max-width: 600px) {
  /* .container {
    width: var(--container-width-sm);
  } */

  section {
    margin-top: 1rem;
  }

  section>h2 {
    margin-bottom: 2rem;
  }
}

